web/src/components/Common/Navigation/Navigation.module.scss
@import '_backline-mixins';
@import 'setting';

.Root {
  background-color: $color-primary-white;
  position: fixed;
  z-index: 300;
  width: 100%;
  padding: 2px spacing(2);
  transition: $duration-shortest $easing-standard;
  // background-color: red;
}

.NavLink {
  float: right;
  display: block;
  text-align: center;
  text-decoration: none;
  padding: 8px 14px;
  margin: 4px 0px;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  min-width: 65px;
  color: $color-primary-black;
}

.Branding {
  font-size: inherit;
  display: inline-block;
  position: relative;
  top: 5px;
  & a {
    display: inline-block;
  }
}

.Logo {
  display: block;
  transition: $duration-short $easing-standard;
  width: 45px;
  height: 100%;
  object-fit: contain;

  &:hover {
    transform: scale(1.2);
    transition: $duration-short $easing-standard;
  }
}

.Root .ToggleNavButton {
  display: none;
}

.Dropdown {
  float: right;
  overflow: hidden;
}

.Dropdown .DropdownBtn {
  border: none;
  outline: none;
  margin: 0;
  border-radius: $radius-small;

  &:hover {
    color: $color-primary-white;
  }

  &.primary {
    padding: 8px 14px;
    margin: 4px 0px;
    min-width: 65px;
  }
}

.DropdownContent {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  min-width: 180px;
  z-index: 300;
  background-color: $color-primary-white;
  border-radius: $radius-small;
  background-color: $color-primary-grey-light;
  margin-left: 8px;
}

.DropdownContent .NavLink {
  float: none;
  color: black;

  text-decoration: none;
  display: block;
  text-align: left;
  margin: 0;
  background-image: none;
  transition: $duration-short $easing-standard;
  &:hover {
    color: $color-primary-white;
    background-color: $color-hover;
  }
}

.DropdownContent .DropdownLink {
  display: block;
  padding: spacing(1);
  border-radius: 0;
  &:first-child {
    border-radius: $radius-small $radius-small 0 0;
  }

  &:last-child {
    border-radius: 0 0 $radius-small $radius-small;
  }

  &:hover {
    transition: $duration-shortest $easing-standard;
  }
}
.Root .NavLink:hover,
.Dropdown:hover .DropdownBtn {
  color: $color-primary-white;
  border-radius: $radius-small;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  // transform: scale(1.02);
  background-image: url('data:image/svg+xml,%3C%3Fxml version="1.0" standalone="no"%3F%3E%3Csvg version="1.0" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 1280.000000 857.000000" preserveAspectRatio="xMidYMid meet"%3E%3Cg transform="translate(0.000000,857.000000) scale(0.100000,-0.100000)"%0Afill="%23e72568" stroke="none"%3E%3Cpath d="M3770 8564 c-96 -10 -332 -56 -451 -88 -375 -103 -998 -369 -1127%0A-480 -119 -103 -189 -211 -237 -370 -35 -116 -77 -163 -178 -203 -130 -50%0A-140 -64 -309 -468 -364 -869 -605 -1498 -830 -2165 -742 -2205 -836 -3659%0A-282 -4396 221 -293 601 -443 966 -379 101 17 242 65 318 108 130 72 199 139%0A931 902 823 858 818 854 1054 970 194 95 345 137 560 156 69 6 915 9 2295 7%0A2039 -3 2191 -5 2273 -21 259 -52 479 -149 674 -295 34 -26 395 -393 800 -816%0A495 -516 763 -788 813 -825 440 -329 1078 -241 1403 192 311 414 419 1060 321%0A1927 -128 1137 -589 2630 -1430 4629 -167 397 -181 420 -280 460 -138 56 -180%0A99 -211 218 -38 153 -154 315 -287 406 -113 76 -573 279 -836 367 -422 142%0A-773 195 -1038 156 -203 -30 -342 -90 -481 -206 -132 -111 78 -100 -1795 -100%0A-1206 0 -1649 3 -1677 11 -21 7 -64 34 -96 62 -200 171 -374 234 -663 241 -85%0A2 -175 2 -200 0z"/%3E%3C/g%3E%3C/svg%3E%0A');
}

.DropdownContent .NavLink:hover {
  color: $color-primary-white;
  border-radius: $radius-small;
  transition: $duration-shortest $easing-standard;
  background-image: none;
}

.Dropdown:hover .DropdownContent {
  opacity: 1;
  transition: $duration-shortest $easing-standard;
  visibility: visible;
}

.DarkModeToggle {
  float: right;
  padding: 8px 0px 8px 14px;
  margin: 4px 4px;
}

.ToggleNavButton,
.DarkModeToggle {
  transition: $duration-shortest $easing-standard;

  &:hover {
    svg path {
      fill: $color-hover;
      stroke: $color-hover;
      transition: $duration-shortest $easing-standard;
    }
  }
}

@media screen and (max-width: 600px) {
  .Root .NavLink:not(:first-child),
  .Dropdown .DropdownBtn {
    display: none;
  }
  .Root .ToggleNavButton {
    float: right;
    display: block;
    position: relative;
    top: 10px;
  }
}

@media screen and (max-width: 600px) {
  .Root.Responsive {
    display: flex;
    flex-direction: column-reverse;
  }

  .Root.Responsive .Branding {
    order: 1;
  }

  .Root.Responsive .ToggleNavButton {
    position: absolute;
    right: 60px;
    top: 15px;
  }

  .Root.Responsive .DarkModeToggle {
    position: absolute;
    right: spacing(2);
    top: 2px;
  }

  .Root.Responsive .NavLink {
    float: none;
    display: block;
    text-align: left;
    background-image: none;
    &:hover {
      background-color: $color-primary-red;
    }
  }

  .Root.Responsive .Dropdown {
    float: none;
    background-image: none;
  }

  .Root.Responsive .DropdownContent {
    position: absolute;
  }

  .Root.Responsive .Dropdown:hover .DropdownContent {
    position: relative;
  }

  .Root.Responsive .Dropdown .DropdownBtn {
    display: block;
    width: 100%;
    text-align: left;
    background-image: none;
    &:first-of-type {
      margin-top: spacing(1);
    }

    &:hover {
      background-color: $color-primary-red;
    }
  }

  .Root.Root.Responsive .NavLink:hover,
  .Dropdown:hover .DropdownBtn {
    background-color: $color-hover;
  }

  .Root.Responsive .DropdownLink {
    span {
      margin-left: spacing(1);
    }
  }
}

.isDark {
  &.Root {
    background-color: $color-primary-black;
  }

  .Dropdown,
  .DropdownContent {
    transition: $duration-shortest $easing-standard;
  }

  .DropdownContent {
    background-color: $color-primary-black-light;
  }

  .NavLink,
  .Dropdown,
  .DarkModeToggle,
  .ToggleNavButton {
    color: $color-primary-white;
  }
}

.NavLink.highlight {
  color: $color-primary-purple;
}

